<resources>
    <string name="app_name">ExpenseTracker</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="my_expenses">My Expenses</string>
    <string name="sort_exp">Sort by expenses</string>
    <string name="sort_date">Sort by date</string>
    <string name="welcome">Track Your Expenses Better</string>
    <string name="title_activity_display_expenses">DisplayExpenses</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="new_type">New</string>
    <string name="prompt_expense_description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_expense_amount">Amount</string>
    <string name="prompt_new_expense">New Expense</string>
    <string name="exit">Exit</string>
</resources>
