<?xml version="1.0" encoding="utf-8"?>




    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:background="@drawable/expenditure_border">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_height="wrap_content"
                android:text="@string/new_type"
                android:layout_width="wrap_content"
                android:layout_marginStart="40dp"
                android:clickable="true"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/view"
                android:clickable="true"


                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:text="@string/delete"


                />

        </LinearLayout>


    </LinearLayout>

