<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.example.vishal.expensetracker.Welcome">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textColor="@color/black_overlay"/>
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/falling_money"/>

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/my_expenses"
                style="?metaButtonBarButtonStyle"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/my_expenses" />
            <Button android:id="@+id/exit"

                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:clickable="true"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_border"

                android:text="@string/exit" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
